# ower

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/ower/: audio.py  cli.py  enums.py  fuo.py  gui.py  http.py  http_client.py  main.py  mqtt.py  mqtt_client.py  music_list.py
